--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                 <div class="left pr">
                   <div class="mockup pc pr">
                     <div class="mask pa">
-                      <img src="./img/project1_pc.png" class="screen" alt="">
+                      <img src="./img/project1_pc.jpg" class="screen" alt="">
                     </div>
                     <!-- mask -->
                     <img src="./img/desktop.png" class="device pa" alt="">
