--- a/index.html
+++ b/index.html
@@ -448,8 +448,9 @@
           <article id="panel-12" class="panel">
             <div class="contact">
               <h2>Contact</h2>
+              <p>제 포트폴리오를 봐주셔서 감사합니다.</p>
               <p>ZIP요하게 코드에 ZIP중하는 ZIP념의 웹 퍼블리셔</p>
-              <p>지금까지 최인혁의 포트폴리오였습니다.</p>
+              <p>최인혁의 포트폴리오였습니다.</p>
               <p>010 4728 3050</p>
               <p>vmfpdlasz@gmail.com</p>
               <div class="title">
@@ -458,7 +459,7 @@
                   <a class="btn-style510" target="_blank" href="https://github.com/rustymotor">깃허브</a>
                 </div>
               </div>
-              <div class="copyright">Copyright&copy; 2024. InHyeok Choi. All Rights Reserved.</div>
+              <!-- <div class="copyright">Copyright&copy; 2024. InHyeok Choi. All Rights Reserved.</div> -->
             </div>
             <div class="parallax">
               <span data-value="-15"></span>
