--- a/index.html
+++ b/index.html
@@ -437,7 +437,7 @@
                       <p>제품디자인</p>
                       <p>Smeaver</p>
                     </div>
-                  <img src="./img/cart.JPG" alt="">
+                  <img src="./img/cart.jpg" alt="">
                   </div>
                 </div>
               </div>
