--- a/index.html
+++ b/index.html
@@ -324,7 +324,9 @@
                 <p>제작 기간 1주</p>
                 <p>기여도 50%</p>
                 <a href="https://www.figma.com/proto/V5k5zQDOg6pxXD3dg9kHcF/%EB%8D%94%ED%94%BC%EC%9B%80-%ED%94%84%EB%A1%9C%ED%86%A0%ED%83%80%EC%9E%85?type=design&node-id=1-3&t=iZJJX35H9peNZvPS-1&scaling=scale-down&page-id=0%3A1&starting-point-node-id=1%3A3&mode=design" target="_blank">프로토타입</a>
+                <a href="https://drive.google.com/file/d/1l600MlNA_kvVbDKT5qLHlydbyEzMU9R7/view?usp=sharing" target="_blank">&nbsp;&nbsp;&nbsp;&nbsp;기획서&nbsp;&nbsp;&nbsp;&nbsp;</a>
               </div>
+
         
               <!-- <div class="skills">
               
