--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <script src="./script/script.js" defer></script>
 
 
+
   </head>
 
   <body>
@@ -39,10 +40,10 @@
             <div class="zipper move" data-value="-1">
             <div class="visual">
               <!-- <img src="./img/profile2gray.png" alt="" /> -->
-              <img src="./img/5387.png" alt="">
+              <img src="./img/cut.png" alt="">
             </div>
               <div class="zipper_line" >
-                <img src="./img/line.png" alt="">
+                <!-- <img src="./img/line.png" alt=""> -->
               </div>
               <!-- <div class="zipper_head">
                 <img src="./img/zipper_head.png" alt="">
