--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             </div>
             <div class="title">
               <h2 class="row1">집중 집념 집요</h2>
-              <h1 class="row2">3ZIP 최인혁입니다.</h1>
+              <h1 class="row2">3ZIP &nbsp;&nbsp; 최인혁입니다.</h1>
               <object data="./img/effect1.svg" type="image/svg+xml" class="eff1"></object>
               <!-- <object data="./img/effect2.svg" type="image/svg+xml" class="eff2"></object> -->
               <div class="fx">
