--- a/index.html
+++ b/index.html
@@ -145,8 +145,9 @@
                 <h2>서울대공원</h2>
                 <p>
                   기존 웹사이트를 대공원이라는 컨셉에 맞게 리디자인한
-                  프로젝트입니다. jQuery로 메인 페이지의 슬라이드 기능을 구현했고 javascript의 cloneNode함수를 이용하여 롤링 슬라이드 배너를 구현했습니다. 그리고 input 과 label 요소를 사용하여 패널의 탭 기능을 만들었습니다. 로그인 페이지도 구현했습니다.
-                  반응형으로 제작하였고 웹접근성을 구현하였으며
+                  프로젝트입니다. jQuery로 메인 페이지의 슬라이드 기능을 구현했고 javaSdcript의 cloneNode함수를 이용하여 롤링 슬라이드 배너를 구현했습니다. input 과 label 요소를 사용하여 패널의 탭 기능을 만들었으며 로그인 페이지를 구현했습니다.
+
+                  <br>반응형으로 제작하였고 웹접근성을 구현하였으며
                   웹표준을 준수하였습니다.
                 </p>
                 <p>제작 기간<span  class="gigan"> 3주</span></p>
@@ -195,7 +196,7 @@
                   <h2>워너디자인 에이전시</h2>
                   <p>
                     HTML과 CSS로 제작한 웹사이트입니다.
-                    Swiper를 사용하여 자동슬라이드 배너를 구현했습니다.
+                    Swiper를 사용하여 자동슬라이드 배너를,
                     marquee태그를 이용하여 전광판 텍스트를 구현했습니다.
                     
                     Gsap 라이브러리를 통해 스크롤에 반응하는 애니메이션 효과를 각 컨텐츠에
