--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
           <article id="panel-2" class="panel">
             <div class="style2">
               <h2 class="typewriter">
-                코드에 집중하고 집요하게 분석하고<br>
-                <span data-text="집념으로 해결하는 3ZIP"></span>
+                코드에 ZIP중하고 ZIP요하게 분석하고<br>
+                <span data-text="ZIP념으로 해결합니다"></span>
               </h2>
               <div class="text1">
                 <div class="fx">
