--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lottie-web/5.12.2/lottie.min.js"></script>
 
     <script src="./script/script.js" defer></script>
+    <script src="./script/scriptnav.js" defer></script>
 
 
 
@@ -200,9 +201,8 @@
                     marquee태그를 이용하여 전광판 텍스트를 구현했습니다.
                     
                     Gsap 라이브러리를 통해 스크롤에 반응하는 애니메이션 효과를 각 컨텐츠에
-                    부여했습니다. 스크롤 길이에 컨텐츠가 순차적으로 이동하는 애니메이션과
-                    숫자 카운트 애니메이션을 구현하였으며 웹표준을
-                    준수하였습니다.
+                    부여했습니다. 스크롤 길이에 컨텐츠가 순차적으로 이동하는 애니메이션과 숫자 카운트 애니메이션을 구현하였습니다.
+                    반응형으로 제작하였으며 웹표준을 준수하였습니다.
                   </p>
                   <p>제작 기간<span  class="gigan"> 1주</span></p>
                   <p>사용 프로그램<span>HTML / CSS / JQuery</span></p>
