--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
               <div class="project2">
                 <div class="pj2_visual"></div>
                 <div class="pj2_box pa pj_box">
-                  <h2>워너디자인 에이전시</h2>
+                  <h2>워너디자인</h2>
                   <p>
                     HTML과 CSS로 제작한 웹사이트입니다.
                     Swiper를 사용하여 자동슬라이드 배너를,
