--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
               <object data="./img/effect1.svg" type="image/svg+xml" class="eff1"></object>
               <!-- <object data="./img/effect2.svg" type="image/svg+xml" class="eff2"></object> -->
               <div class="fx">
-                <a class="btn-style510" href="https://drive.google.com/file/d/179VzOrTusG_I3-CrL-UTlL7LCHfBLbeF/view?usp=sharing" target="_blank">이력서</a>
+                <a class="btn-style510" href="https://drive.google.com/file/d/1c1glgRorIDei5zR2GiG9NNHSeQmncQgn/view?usp=sharing" target="_blank">이력서</a>
                 <a class="btn-style510" target="_blank" href="https://github.com/rustymotor">깃허브</a>
               </div>
             </div>
@@ -84,8 +84,8 @@
                     <h3>Licenses</h3>
                     <ul>
                       <li>포토샵 GTQ 1급</li>
-                      <!-- <li>웹디자인 기능사</li> -->
-                      <li>운전면허 1종 보통</li>
+                      <li class="acc">웹디자인 기능사</li>
+                      <li >운전면허 1종 보통</li>
                       <li class="acc">TOEIC 825 / 영어회화가능</li>
                     </ul>
                   </div>
@@ -455,8 +455,7 @@
               <p>제 포트폴리오를 봐주셔서 감사합니다.</p>
               <p>ZIP요하게 코드에 ZIP중하는 ZIP념의 웹 퍼블리셔</p>
               <p>최인혁의 포트폴리오였습니다.</p>
-              <p>010 4728 3050</p>
-              <p>vmfpdlasz@gmail.com</p>
+              <p><span>010 4728 3050</span>&nbsp;&nbsp; | &nbsp;&nbsp;<span>vmfpdlasz@gmail.com</span></p>
               <div class="title">
                 <div class="fx">
                   <a class="btn-style510" href="https://drive.google.com/file/d/1k2ooLMZvWA_nG3NOnpA-vyTykZ9vm8qY/view?usp=sharing" target="_blank">이력서</a>
