--- a/index.html
+++ b/index.html
@@ -362,21 +362,21 @@
                     <svg>
                       <circle cx="110" cy="110" r="80"></circle>
                     </svg>
-                    <p>Javascript</p>
+                    <p>JavaScript</p>
                   </div>
                   <div class="chart">
                     <h2 data-num="85">0</h2>
                     <svg>
                       <circle cx="110" cy="110" r="80"></circle>
                     </svg>
-                    <p>Jquery</p>
+                    <p>JQuery</p>
                   </div>
                   <div class="chart">
                     <h2 data-num="86">0</h2>
                     <svg>
                       <circle cx="110" cy="110" r="80"></circle>
                     </svg>
-                    <p>Solidworks</p>
+                    <p>SolidWorks</p>
                   </div>
                 </div>
                 <div class="charts">
@@ -399,21 +399,21 @@
                     <svg>
                       <circle cx="110" cy="110" r="80"></circle>
                     </svg>
-                    <p>ILLUSTRATOR</p>
+                    <p>Illustrator</p>
                   </div>
                   <div class="chart">
                     <h2 data-num="94">0</h2>
                     <svg>
                       <circle cx="110" cy="110" r="80"></circle>
                     </svg>
-                    <p>PHOTOSHOP</p>
+                    <p>Photoshop</p>
                   </div>
                   <div class="chart">
                     <h2 data-num="90">0</h2>
                     <svg>
                       <circle cx="110" cy="110" r="80"></circle>
                     </svg>
-                    <p>Keyshot</p>
+                    <p>KeyShot</p>
                   </div>
                 </div>
               </div>
