--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                 </div>
               </div>
               <div class="visual2">
-                <img src="img/5493.png" alt="">
+                <img src="img/profile2.png" alt="">
                 <!-- <div id="lottie4"></div> -->
               </div>
               <div id="lottie2"></div>
