--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             
             <div class="zipper move" data-value="-1">
             <div class="visual">
-              <img src="./img/cut.png" alt="">
+              <img src="./img/cut.png" alt="#">
             </div>
               <div class="zipper_line" >
               </div>
@@ -144,7 +144,7 @@
                 <h2>서울대공원</h2>
                 <p>
                   기존 웹사이트를 대공원이라는 컨셉에 맞게 리디자인한
-                  프로젝트입니다. jQuery로 메인 페이지의 슬라이드 기능을 구현했고 javaSdcript의 cloneNode함수를 이용하여 롤링 슬라이드 배너를 구현했습니다. input 과 label 요소를 사용하여 패널의 탭 기능을 만들었으며 로그인 페이지를 구현했습니다.
+                  프로젝트입니다. jQuery로 메인 페이지의 슬라이드 기능을 구현했고 javaScript의 cloneNode함수를 이용하여 롤링 슬라이드 배너를 구현했습니다. input 과 label 요소를 사용하여 패널의 탭 기능을 만들었으며 로그인 페이지를 구현했습니다.
 
                   <br>반응형으로 제작하였고 웹접근성을 구현하였으며
                   웹표준을 준수하였습니다.
