--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>최인혁의 포트폴리오</title>
     <link rel="icon" href="./img/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="./css/reset.css">
-    <!-- <link rel="stylesheet" href="./css/responsive.css"> -->
+    <link rel="stylesheet" href="./css/responsive.css">
     <link rel="stylesheet" href="./css/style.css">
 
     <!-- <link rel="stylesheet" href="./css/responsive.css"> -->
