--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
             <div class="scrollright" data-value="3">
               <p>오른쪽으로 스크롤</p><i class="fa fa-long-arrow-right" aria-hidden="true"></i>
             </div>
+            <div class="botline"><img src="./img/botline.png" alt=""></div>
           </article>
           <article id="panel-2" class="panel">
             <div class="style2">
