--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
               <div class="fx">
                 <a class="btn-style510" href="https://drive.google.com/file/d/1c1glgRorIDei5zR2GiG9NNHSeQmncQgn/view?usp=sharing" target="_blank">이력서</a>
                 <a class="btn-style510" target="_blank" href="https://github.com/rustymotor">깃허브</a>
+                <a class="btn-style510" target="_blank" href="https://rustymotor.github.io/portfolio.vertical/">대체 사이트</a>
               </div>
             </div>
             <div class="scrollright" data-value="3">
